--- a/index.html
+++ b/index.html
@@ -1,1 +1,182 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="ToolVerse – One-click tools for finance, health, spirituality & productivity. Simple, fast & 100% free."/>
+  <meta name="keywords" content="Finance Tools, Health Calculators, Vastu Checker, Astrology Tools, Free Productivity Tools"/>
+  <meta name="author" content="ToolVerse | AD Media Network"/>
+  <title>ToolVerse – All-in-One Productivity Hub</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --bg-light: #f8f9fa;
+      --bg-dark: #1c1e21;
+      --text-light: #1c1e21;
+      --text-dark: #f8f9fa;
+      --accent: #007bff;
+      --card: #ffffff;
+      --card-dark: #2a2c30;
+    }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: var(--bg-light);
+      color: var(--text-light);
+      transition: all 0.3s ease;
+    }
+    body.dark {
+      background: var(--bg-dark);
+      color: var(--text-dark);
+    }
+    header {
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2rem;
+      font-weight: 800;
+      margin-bottom: 0.2rem;
+    }
+    header p {
+      font-size: 1rem;
+      font-weight: 400;
+      opacity: 0.8;
+    }
+    .toggle {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      cursor: pointer;
+      padding: 0.4rem 0.8rem;
+      background: var(--accent);
+      color: #fff;
+      border-radius: 6px;
+      font-size: 0.9rem;
+    }
+    section {
+      padding: 1rem 2rem;
+    }
+    h2 {
+      font-size: 1.3rem;
+      margin-bottom: 0.5rem;
+      margin-top: 2rem;
+      border-bottom: 2px solid var(--accent);
+      display: inline-block;
+      padding-bottom: 4px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+    .tool {
+      background: var(--card);
+      padding: 1rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      text-align: center;
+      font-weight: 600;
+      transition: transform 0.2s ease, background 0.2s ease;
+      cursor: pointer;
+    }
+    .tool:hover {
+      transform: translateY(-3px);
+      background: #e6f0ff;
+    }
+    body.dark .tool {
+      background: var(--card-dark);
+    }
+    body.dark .tool:hover {
+      background: #34495e;
+    }
+    footer {
+      margin-top: 2rem;
+      padding: 1rem;
+      text-align: center;
+      font-size: 0.9rem;
+      opacity: 0.7;
+    }
+    .adsense {
+      margin: 2rem auto;
+      padding: 1rem;
+      background: #f0f8ff;
+      text-align: center;
+      border-radius: 8px;
+      font-size: 0.9rem;
+      max-width: 500px;
+    }
+    body.dark .adsense {
+      background: #2b3a42;
+    }
+  </style>
+</head>
+<body>
+  <div class="toggle" onclick="toggleMode()">🌙 Dark Mode</div>
+
+  <header>
+    <h1>ToolVerse</h1>
+    <p>All-in-One Free Tools Hub for Smarter Living</p>
+  </header>
+
+  <section>
+    <h2>Finance Tools</h2>
+    <div class="grid">
+      <div class="tool">Loan EMI Calculator</div>
+      <div class="tool">Crypto Investment Estimator</div>
+      <div class="tool">Freelancer Rate Calculator</div>
+      <div class="tool">Resume Builder Tips</div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Life & Wellness</h2>
+    <div class="grid">
+      <div class="tool">BMI & Weight Tracker</div>
+      <div class="tool">Mood Tracker</div>
+      <div class="tool">Affirmation Generator</div>
+      <div class="tool">Study Timetable Creator</div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Creativity & Planning</h2>
+    <div class="grid">
+      <div class="tool">Startup Name Generator</div>
+      <div class="tool">Instagram Bio Generator</div>
+      <div class="tool">Color Palette Generator</div>
+      <div class="tool">Budget Travel Planner</div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Spiritual & Fun</h2>
+    <div class="grid">
+      <div class="tool">Karma Quiz</div>
+      <div class="tool">Dream Interpreter</div>
+      <div class="tool">Astrology Match Checker</div>
+      <div class="tool">Vastu Checker</div>
+      <div class="tool">Festival Greeting Generator</div>
+    </div>
+  </section>
+
+  <div class="adsense">
+    <!-- Google AdSense Code Placeholder -->
+    📢 Ad goes here – Earn while people use your tools!
+  </div>
+
+  <footer>
+    &copy; 2025 ToolVerse. All Rights Reserved. Powered by AD Media Network.
+  </footer>
+
+  <script>
+    function toggleMode() {
+      document.body.classList.toggle('dark');
+      const toggleBtn = document.querySelector('.toggle');
+      toggleBtn.innerText = document.body.classList.contains('dark') ? '☀️ Light Mode' : '🌙 Dark Mode';
+    }
+  </script>
+</body>
+</html>
 
